[package]
name = "rantlr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
insta = { version = "1.39.0", default-features = false }
itertools = "0.13.0"
log = "0.4.22"
regex = "1.10.5"
thiserror = "1.0.63"
